Gossip Algorithm Write Working - Write working with reset on coordinator restart - Tested and added more files to keep coordinator and ecommerce separate.